--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -1,71 +1,85 @@
 /* - header - */
 .header {
-    position: relative;
-    z-index: 2;
-    height: 80px;
-    background-color: #f2f2f4;
-    text-align: center;
+	position: relative;
+	z-index: 2;
+	height: 80px;
+	background-color: #f2f2f4;
+	text-align: center;
 }
 
 .header-lg {
 
-    height: 130px;
+	height: 130px;
 
-    &.logo-lg a {   
-        display: inline-block;
-        height: 57px;
-        width: 366px;
-        margin: 36px auto 37px;
-        padding: 0;
-    }
+	@media screen and (max-width: @screen-xs) {
+		height: 80px;
+	}  
+
+
+	&.logo-lg a {
+		background-image: url('/img/logo-home.png');
+		display: inline-block;
+		height: 57px;
+		width: 366px;
+		margin: 36px auto 37px;
+		padding: 0;
+
+		@media screen and (max-width: @screen-xs) {
+			background-image: url('/img/logo.png');
+			width: 243px;
+			height: 38px;
+			vertical-align: middle;
+			margin: 21px auto;
+		}  
+	}
 }
 
 .logo {
-    position: relative;
-    margin: 0 auto;
-    vertical-align: middle;
-    line-height: 80px;
+	position: relative;
+	margin: 0 auto;
+	vertical-align: middle;
+	line-height: 80px;
 
-    img {
-        display: inline;
-        vertical-align: middle;
-    }
+	img {
+		display: inline;
+		vertical-align: middle;
+	}
 }
 
 .wrapper {
-    position: relative;
-    margin: 0 5%;
-    padding-top: 30px;
+	position: relative;
+	margin: 0 5%;
+	padding-top: 30px;
 }
 
 .jobs-grid {
-    margin-left: -30px;
+	margin-left: -30px;
 }
 
 .toppanel {
-    padding: 10px 20px;
-    border-top: 1px solid #42af80;
-    background-color: @primary-color;
-    color: #fff;
-    text-align: center;
-    font-size: 20px;
-    line-height: 30px;
+	padding: 10px 20px;
+	border-top: 1px solid #42af80;
+	background-color: @primary-color;
+	color: #fff;
+	text-align: center;
+	font-size: 20px;
+	line-height: 30px;
 
 
-    a {
-        color: #28694c;
-        text-decoration: underline;
+	a {
+		color: #28694c;
+		text-decoration: underline;
 
-        &:hover {
-            text-decoration: none;
-        }
-    }
+		&:hover {
+			text-decoration: none;
+		}
+	}
 
 }
 
 .box {
-    border: 1px solid #d5d5da;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0,0,0,.06);
+	border: 1px solid #d5d5da;
+	border-radius: 5px;
+	background-color: #fff;
+	box-shadow: 0 1px 3px rgba(0,0,0,.06);
 }
